-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 21
-
Component/s: hotspot
-
b14
-
generic
-
generic
The following test failed in the JDK21 CI:
applications/helidonapp/HelidonAppTest.java
Here's a log file snippet from the windows-x64 sighting:
The tail of stress stdout is:
For random generator using seed: -2693253877557377341
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2693253877557377341" to command line.
Stress process main method is started.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\\sb\\prod\\1676585231\\workspace\\open\\src\\hotspot\\cpu\\x86\\frame_x86.inline.hpp:385), pid=31248, tid=25848
# assert(_cb == CodeCache::find_blob(pc())) failed: Must be the same
#
# JRE version: Java(TM) SE Runtime Environment (21.0+11) (fastdebug build 21-ea+11-LTS-809)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+11-LTS-809, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
# Core dump will be written. Default location: C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.mdmp
#
# JFR recording file will be written. Location: C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.log
[error occurred during error reporting (), id 0xe0000000, Internal Error (c:\\sb\\prod\\1676585231\\workspace\\open\\src\\hotspot\\share\\runtime\\mutex.cpp:57)]
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(211/27663)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000019f1008db00): VMThread "VM Thread" [stack: 0x000000358e100000,0x000000358e200000] [id=25848]
Stack: [0x000000358e100000,0x000000358e200000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xbf7c01] os::win32::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
V [jvm.dll+0xe70ec0] VMError::report+0x10c0 (vmError.cpp:813)
V [jvm.dll+0xe72afe] VMError::report_and_die+0x6ce (vmError.cpp:1593)
V [jvm.dll+0xe73244] VMError::report_and_die+0x64 (vmError.cpp:1352)
V [jvm.dll+0x576d86] report_vm_error+0x96 (debug.cpp:181)
V [jvm.dll+0x3fb6d1] frame::sender_raw+0x1c1 (frame_x86.inline.hpp:385)
V [jvm.dll+0x7ea899] JavaThread::metadata_do+0xf9 (javaThread.cpp:1421)
V [jvm.dll+0xdf5d24] Threads::metadata_do+0xb4 (threads.cpp:1346)
V [jvm.dll+0xb586ab] MetadataOnStackMark::MetadataOnStackMark+0x11b (metadataOnStackMark.cpp:66)
V [jvm.dll+0x9ff326] VM_RedefineClasses::doit+0x96 (jvmtiRedefineClasses.cpp:262)
V [jvm.dll+0xe7a4f8] VM_Operation::evaluate+0xc8 (vmOperations.cpp:72)
V [jvm.dll+0xe7c0dc] VMThread::evaluate_operation+0x9c (vmThread.cpp:282)
V [jvm.dll+0xe7c816] VMThread::inner_execute+0x256 (vmThread.cpp:431)
V [jvm.dll+0xe7cb80] VMThread::run+0x150 (vmThread.cpp:175)
V [jvm.dll+0xde5ea3] Thread::call_run+0x253 (thread.cpp:229)
V [jvm.dll+0xbf6538] os::win32::thread_native_entry+0xb8 (os_windows.cpp:550)
C [ucrtbase.dll+0x2268a]
C [KERNEL32.DLL+0x17974]
C [ntdll.dll+0x5a0b1]
VM_Operation (0x000000358f0fed10): RedefineClasses, mode: safepoint, requested by thread 0x0000019f1114cad0
Please note that the windows-x64 crash above is different than the
macosx-x64 crash below:
Here's a log file snippet from the macosx-x64 crash:
The tail of stress stdout is:
For random generator using seed: -2693253877557377341
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2693253877557377341" to command line.
Stress process main method is started.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000000000000, pid=92554, tid=33539
#
# JRE version: Java(TM) SE Runtime Environment (21.0+11) (fastdebug build 21-ea+11-LTS-809)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+11-LTS-809, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
# Problematic frame:
#
[error occurred during error reporting (printing problematic frame), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
# Core dump will be written. Default location: core.92554
#
# JFR recording file will be written. Location: /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84886/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4f5ae565-bb45-4d73-98fc-6d4c3b598aa6/runs/31169f6b-7075-4000-b0fa-67b165549523/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java/scratch/0/hs_err_pid92554.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84886/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4f5ae565-bb45-4d73-98fc-6d4c3b598aa6/runs/31169f6b-7075-4000-b0fa-67b165549523/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java/scratch/0/hs_err_pid92554.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(188/31508)----------
Here's the calling thread's stack (not much there):
--------------- T H R E A D ---------------
Current thread (0x00007fd27d31fe10): JavaThread "ForkJoinPool-1-worker-6" daemon [_thread_in_Java, id=33539, stack(0x0000700003f2a000,0x000070000402a000)]
Stack: [0x0000700003f2a000,0x000070000402a000]
[error occurred during error reporting (printing stack bounds), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
[error occurred during error reporting (printing native stack (with source info)), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
Retrying call stack printing without source information...
[error occurred during error reporting (retry printing native stack (no source info)), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000
In the windows-x64 failure, the VMThread crashed and in the
macosx-x64 failure, "ForkJoinPool-1-worker-6" crashed.
Both crashes happened in frame code.
I'm starting this bug in hotspot/runtime for initial triage.
applications/helidonapp/HelidonAppTest.java
Here's a log file snippet from the windows-x64 sighting:
The tail of stress stdout is:
For random generator using seed: -2693253877557377341
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2693253877557377341" to command line.
Stress process main method is started.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (c:\\sb\\prod\\1676585231\\workspace\\open\\src\\hotspot\\cpu\\x86\\frame_x86.inline.hpp:385), pid=31248, tid=25848
# assert(_cb == CodeCache::find_blob(pc())) failed: Must be the same
#
# JRE version: Java(TM) SE Runtime Environment (21.0+11) (fastdebug build 21-ea+11-LTS-809)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+11-LTS-809, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
# Core dump will be written. Default location: C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.mdmp
#
# JFR recording file will be written. Location: C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# C:\\sb\\prod\\1676617263\\testoutput\\test-support\\jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java\\scratch\\0\\hs_err_pid31248.log
[error occurred during error reporting (), id 0xe0000000, Internal Error (c:\\sb\\prod\\1676585231\\workspace\\open\\src\\hotspot\\share\\runtime\\mutex.cpp:57)]
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(211/27663)*----------
Here's the crashing thread's stack:
--------------- T H R E A D ---------------
Current thread (0x0000019f1008db00): VMThread "VM Thread" [stack: 0x000000358e100000,0x000000358e200000] [id=25848]
Stack: [0x000000358e100000,0x000000358e200000]
Native frames: (J=compiled Java code, j=interpreted, Vv=VM code, C=native code)
V [jvm.dll+0xbf7c01] os::win32::platform_print_native_stack+0xf1 (os_windows_x86.cpp:236)
V [jvm.dll+0xe70ec0] VMError::report+0x10c0 (vmError.cpp:813)
V [jvm.dll+0xe72afe] VMError::report_and_die+0x6ce (vmError.cpp:1593)
V [jvm.dll+0xe73244] VMError::report_and_die+0x64 (vmError.cpp:1352)
V [jvm.dll+0x576d86] report_vm_error+0x96 (debug.cpp:181)
V [jvm.dll+0x3fb6d1] frame::sender_raw+0x1c1 (frame_x86.inline.hpp:385)
V [jvm.dll+0x7ea899] JavaThread::metadata_do+0xf9 (javaThread.cpp:1421)
V [jvm.dll+0xdf5d24] Threads::metadata_do+0xb4 (threads.cpp:1346)
V [jvm.dll+0xb586ab] MetadataOnStackMark::MetadataOnStackMark+0x11b (metadataOnStackMark.cpp:66)
V [jvm.dll+0x9ff326] VM_RedefineClasses::doit+0x96 (jvmtiRedefineClasses.cpp:262)
V [jvm.dll+0xe7a4f8] VM_Operation::evaluate+0xc8 (vmOperations.cpp:72)
V [jvm.dll+0xe7c0dc] VMThread::evaluate_operation+0x9c (vmThread.cpp:282)
V [jvm.dll+0xe7c816] VMThread::inner_execute+0x256 (vmThread.cpp:431)
V [jvm.dll+0xe7cb80] VMThread::run+0x150 (vmThread.cpp:175)
V [jvm.dll+0xde5ea3] Thread::call_run+0x253 (thread.cpp:229)
V [jvm.dll+0xbf6538] os::win32::thread_native_entry+0xb8 (os_windows.cpp:550)
C [ucrtbase.dll+0x2268a]
C [KERNEL32.DLL+0x17974]
C [ntdll.dll+0x5a0b1]
VM_Operation (0x000000358f0fed10): RedefineClasses, mode: safepoint, requested by thread 0x0000019f1114cad0
Please note that the windows-x64 crash above is different than the
macosx-x64 crash below:
Here's a log file snippet from the macosx-x64 crash:
The tail of stress stdout is:
For random generator using seed: -2693253877557377341
To re-run test with same seed value please add "-Djdk.test.lib.random.seed=-2693253877557377341" to command line.
Stress process main method is started.
#
# A fatal error has been detected by the Java Runtime Environment:
#
# SIGSEGV (0xb) at pc=0x0000000000000000, pid=92554, tid=33539
#
# JRE version: Java(TM) SE Runtime Environment (21.0+11) (fastdebug build 21-ea+11-LTS-809)
# Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 21-ea+11-LTS-809, mixed mode, tiered, compressed oops, compressed class ptrs, g1 gc, bsd-amd64)
# Problematic frame:
#
[error occurred during error reporting (printing problematic frame), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
# Core dump will be written. Default location: core.92554
#
# JFR recording file will be written. Location: /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84886/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4f5ae565-bb45-4d73-98fc-6d4c3b598aa6/runs/31169f6b-7075-4000-b0fa-67b165549523/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java/scratch/0/hs_err_pid92554.jfr
#
Unsupported internal testing APIs have been used.
# An error report file with more information is saved as:
# /System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84886/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/4f5ae565-bb45-4d73-98fc-6d4c3b598aa6/runs/31169f6b-7075-4000-b0fa-67b165549523/testoutput/test-support/jtreg_closed_test_hotspot_jtreg_applications_helidonapp_HelidonAppTest_java/scratch/0/hs_err_pid92554.log
#
# If you would like to submit a bug report, please visit:
# https://bugreport.java.com/bugreport/crash.jsp
#
----------System.err:(188/31508)----------
Here's the calling thread's stack (not much there):
--------------- T H R E A D ---------------
Current thread (0x00007fd27d31fe10): JavaThread "ForkJoinPool-1-worker-6" daemon [_thread_in_Java, id=33539, stack(0x0000700003f2a000,0x000070000402a000)]
Stack: [0x0000700003f2a000,0x000070000402a000]
[error occurred during error reporting (printing stack bounds), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
[error occurred during error reporting (printing native stack (with source info)), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
Retrying call stack printing without source information...
[error occurred during error reporting (retry printing native stack (no source info)), id 0xe0000000, Internal Error (/System/Volumes/Data/mesos/work_dir/slaves/91e16c40-06d4-468a-9fc3-7198a5bb7d5a-S84884/frameworks/1735e8a2-a1db-478c-8104-60c8b0af87dd-0196/executors/dd857bcb-0874-431c-8be1-131d6448d003/runs/23b8b037-5a50-4109-bca8-8b1719b592b5/workspace/open/src/hotspot/cpu/x86/frame_x86.inline.hpp:62)]
siginfo: si_signo: 11 (SIGSEGV), si_code: 1 (SEGV_MAPERR), si_addr: 0x0000000000000000
In the windows-x64 failure, the VMThread crashed and in the
macosx-x64 failure, "ForkJoinPool-1-worker-6" crashed.
Both crashes happened in frame code.
I'm starting this bug in hotspot/runtime for initial triage.